make dirs for dataset placeholder

--- a/ai/Megatron/English/Python/Start_Here.ipynb
+++ b/ai/Megatron/English/Python/Start_Here.ipynb
@@ -217,6 +217,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "## making placeholder folders for dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.makedirs('./dataset/EN/32k', exist_ok=True)\n",
+    "os.makedirs('./dataset/EN/50k', exist_ok=True)\n",
+    "os.makedirs('./dataset/SV/32k', exist_ok=True)\n",
+    "os.makedirs('./dataset/SV/56k', exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Tutorial Outline\n",
     "\n",
     "The following contents will be covered during the Bootcamp :\n",
