add Copyright (c) 2020 NVIDIA Corporation.  All rights reserved.to all python/bash scripts

--- a/ai/Megatron/English/Python/jupyter_notebook/Day3-5_run_Megatron_with_varying_config.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Day3-5_run_Megatron_with_varying_config.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "appreciated-playing",
+   "id": "boxed-privilege",
    "metadata": {},
    "source": [
     "# \n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "homeless-academy",
+   "id": "royal-holiday",
    "metadata": {},
    "source": [
     "<a id=\"Rerun_Cell\"></a>"
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "through-marketing",
+   "id": "opening-description",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "legitimate-thermal",
+   "id": "future-explorer",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
    ],
    "source": [
     "%%writefile ./Megatron-LM/profile_SVGPT_BIG.sh\n",
-    "\n",
+    "# Copyright (c) 2020 NVIDIA Corporation.  All rights reserved.\n",
     "MASTER_ADDR=localhost\n",
     "MASTER_PORT=6000\n",
     "NNODES=1 #<-- currently we are using 1 node multigpus\n",
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accurate-riding",
+   "id": "confident-prerequisite",
    "metadata": {},
    "source": [
     "---\n",
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "minimal-lighter",
+   "id": "affecting-function",
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cutting-patrol",
+   "id": "hairy-dominican",
    "metadata": {},
    "source": [
     "---\n",
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "demographic-macro",
+   "id": "acknowledged-brake",
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "opening-latter",
+   "id": "determined-right",
    "metadata": {},
    "source": [
     "## Remember to copy and paste your output on Slack or Zoom\n",
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "jewish-tomorrow",
+   "id": "searching-worthy",
    "metadata": {},
    "source": [
     "-----\n",
