add notebook on scrap NVblog raw text, update Start_Here.ipynb

--- a/ai/Megatron/English/Python/Start_Here.ipynb
+++ b/ai/Megatron/English/Python/Start_Here.ipynb
@@ -238,6 +238,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "# create your own data - web crawling \n",
+    "please go through the notebook [link here](./jupyter_notebook/Megatron-LM/tools/openwebtext/Day3-Website_scrapping.ipynb) to scrape NVIDIA blog's data "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Tutorial Outline\n",
     "\n",
     "The following contents will be covered during the Bootcamp :\n",
