correcting paths sets and comments on how to modify

--- a/ai/Megatron/English/Python/Start_Here.ipynb
+++ b/ai/Megatron/English/Python/Start_Here.ipynb
@@ -60,29 +60,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wed Aug 25 07:03:55 2021       \n",
+      "Wed Sep 15 09:14:15 2021       \n",
       "+-----------------------------------------------------------------------------+\n",
-      "| NVIDIA-SMI 450.51.05    Driver Version: 450.51.05    CUDA Version: 11.2     |\n",
+      "| NVIDIA-SMI 460.27.04    Driver Version: 460.27.04    CUDA Version: 11.2     |\n",
       "|-------------------------------+----------------------+----------------------+\n",
       "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
       "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
       "|                               |                      |               MIG M. |\n",
       "|===============================+======================+======================|\n",
-      "|   0  Tesla V100-SXM2...  On   | 00000000:06:00.0 Off |                    0 |\n",
-      "| N/A   34C    P0    57W / 300W |      0MiB / 16160MiB |      0%      Default |\n",
-      "|                               |                      |                  N/A |\n",
+      "|   0  A100-SXM4-40GB      On   | 00000000:07:00.0 Off |                    0 |\n",
+      "| N/A   24C    P0    57W / 400W |      0MiB / 40536MiB |      4%      Default |\n",
+      "|                               |                      |             Disabled |\n",
       "+-------------------------------+----------------------+----------------------+\n",
-      "|   1  Tesla V100-SXM2...  On   | 00000000:85:00.0 Off |                    0 |\n",
-      "| N/A   30C    P0    41W / 300W |      0MiB / 16160MiB |      0%      Default |\n",
-      "|                               |                      |                  N/A |\n",
-      "+-------------------------------+----------------------+----------------------+\n",
-      "|   2  Tesla V100-SXM2...  On   | 00000000:86:00.0 Off |                    0 |\n",
-      "| N/A   31C    P0    41W / 300W |      0MiB / 16160MiB |      0%      Default |\n",
-      "|                               |                      |                  N/A |\n",
-      "+-------------------------------+----------------------+----------------------+\n",
-      "|   3  Tesla V100-SXM2...  On   | 00000000:89:00.0 Off |                    0 |\n",
-      "| N/A   33C    P0    40W / 300W |      0MiB / 16160MiB |      0%      Default |\n",
-      "|                               |                      |                  N/A |\n",
+      "|   1  A100-SXM4-40GB      On   | 00000000:0F:00.0 Off |                    0 |\n",
+      "| N/A   24C    P0    53W / 400W |      0MiB / 40536MiB |      0%      Default |\n",
+      "|                               |                      |             Disabled |\n",
       "+-------------------------------+----------------------+----------------------+\n",
       "                                                                               \n",
       "+-----------------------------------------------------------------------------+\n",
@@ -132,34 +124,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GPU 0: Tesla V100-SXM2-16GB (UUID: GPU-b29deceb-3745-51d2-2cf3-807ea8ac8e60)\n",
-      "\t Link 0: 25.781 GB/s\n",
-      "\t Link 1: 25.781 GB/s\n",
-      "\t Link 2: 25.781 GB/s\n",
-      "\t Link 3: 25.781 GB/s\n",
-      "\t Link 4: 25.781 GB/s\n",
-      "\t Link 5: 25.781 GB/s\n",
-      "GPU 1: Tesla V100-SXM2-16GB (UUID: GPU-4de46420-3e95-182f-c0c3-d488dda562d8)\n",
-      "\t Link 0: 25.781 GB/s\n",
-      "\t Link 1: 25.781 GB/s\n",
-      "\t Link 2: 25.781 GB/s\n",
-      "\t Link 3: 25.781 GB/s\n",
-      "\t Link 4: 25.781 GB/s\n",
-      "\t Link 5: 25.781 GB/s\n",
-      "GPU 2: Tesla V100-SXM2-16GB (UUID: GPU-8e9b4e82-ac7f-c189-cc17-045a3585def2)\n",
-      "\t Link 0: 25.781 GB/s\n",
-      "\t Link 1: 25.781 GB/s\n",
-      "\t Link 2: 25.781 GB/s\n",
-      "\t Link 3: 25.781 GB/s\n",
-      "\t Link 4: 25.781 GB/s\n",
-      "\t Link 5: 25.781 GB/s\n",
-      "GPU 3: Tesla V100-SXM2-16GB (UUID: GPU-a3d96d2e-c606-b23f-e9e0-59a3a507fc10)\n",
-      "\t Link 0: 25.781 GB/s\n",
-      "\t Link 1: 25.781 GB/s\n",
-      "\t Link 2: 25.781 GB/s\n",
-      "\t Link 3: 25.781 GB/s\n",
-      "\t Link 4: 25.781 GB/s\n",
-      "\t Link 5: 25.781 GB/s\n"
+      "GPU 0: A100-SXM4-40GB (UUID: GPU-2e4d2105-718d-3b94-6f0f-25c148681e83)\n",
+      "\t Link 0: 25 GB/s\n",
+      "\t Link 1: 25 GB/s\n",
+      "\t Link 2: 25 GB/s\n",
+      "\t Link 3: 25 GB/s\n",
+      "\t Link 4: 25 GB/s\n",
+      "\t Link 5: 25 GB/s\n",
+      "\t Link 6: 25 GB/s\n",
+      "\t Link 7: 25 GB/s\n",
+      "\t Link 8: 25 GB/s\n",
+      "\t Link 9: 25 GB/s\n",
+      "\t Link 10: 25 GB/s\n",
+      "\t Link 11: 25 GB/s\n",
+      "GPU 1: A100-SXM4-40GB (UUID: GPU-49615223-919e-6f9f-ad79-69d86bc1a13b)\n",
+      "\t Link 0: 25 GB/s\n",
+      "\t Link 1: 25 GB/s\n",
+      "\t Link 2: 25 GB/s\n",
+      "\t Link 3: 25 GB/s\n",
+      "\t Link 4: 25 GB/s\n",
+      "\t Link 5: 25 GB/s\n",
+      "\t Link 6: 25 GB/s\n",
+      "\t Link 7: 25 GB/s\n",
+      "\t Link 8: 25 GB/s\n",
+      "\t Link 9: 25 GB/s\n",
+      "\t Link 10: 25 GB/s\n",
+      "\t Link 11: 25 GB/s\n"
      ]
     }
    ],
@@ -198,12 +188,12 @@
      "text": [
       "\n",
       "Sampling Environment Check\n",
-      "Linux Kernel Paranoid Level = 1: OK\n",
+      "Linux Kernel Paranoid Level = 2: OK\n",
       "Linux Distribution = Ubuntu\n",
-      "Linux Kernel Version = 4.15.0-112-generic: OK\n",
+      "Linux Kernel Version = 4.18.0-305.12.1.el8_4.x86_64: OK\n",
       "Linux perf_event_open syscall available: OK\n",
       "Sampling trigger event available: OK\n",
-      "Intel(c) Last Branch Record support: Available\n",
+      "Intel(c) Last Branch Record support: Not Available\n",
       "Sampling Environment: OK\n"
      ]
     }
@@ -223,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +221,11 @@
     "os.makedirs('./dataset/EN/32k', exist_ok=True)\n",
     "os.makedirs('./dataset/EN/50k', exist_ok=True)\n",
     "os.makedirs('./dataset/SV/32k', exist_ok=True)\n",
-    "os.makedirs('./dataset/SV/56k', exist_ok=True)"
+    "os.makedirs('./dataset/SV/56k', exist_ok=True)\n",
+    "os.makedirs('./sv_ckpt/', exist_ok=True)\n",
+    "os.makedirs('./profiles/naive', exist_ok=True)\n",
+    "os.makedirs('./profiles/2ndrun', exist_ok=True)\n",
+    "os.makedirs('./profiles/SV', exist_ok=True)"
    ]
   },
   {
@@ -247,6 +241,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "### Tutorial Outline\n",
     "\n",
     "The following contents will be covered during the Bootcamp :\n",
