--- a/ai/Megatron/English/Python/jupyter_notebook/Day2-4_jsonfy_and_process2mmap.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Day2-4_jsonfy_and_process2mmap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "convertible-whale",
+   "id": "dependent-chemistry",
    "metadata": {},
    "source": [
     "# \n",
@@ -23,8 +23,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "surrounded-counter",
+   "execution_count": 1,
+   "id": "square-louisville",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,15 +35,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "complete-lindsay",
+   "execution_count": 2,
+   "id": "human-appliance",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.07 ms ± 55.1 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "3.84 ms ± 36.4 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -54,15 +54,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "conventional-mason",
+   "execution_count": 3,
+   "id": "heard-baseball",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "62 µs ± 136 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "43 µs ± 120 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -73,8 +73,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "dynamic-nudist",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## clean up\n",
+    "!rm myarr.npy"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "functioning-stage",
+   "id": "soviet-jumping",
    "metadata": {},
    "source": [
     "----------------------------------------------------------\n",
@@ -86,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eastern-habitat",
+   "id": "acting-covering",
    "metadata": {},
    "source": [
     "----------------------------------------------------------\n",
@@ -102,25 +113,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "finite-marina",
+   "execution_count": 5,
+   "id": "organic-malaysia",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "finished processing 74 lines to loose json format\n"
+      "finished processing 71 lines to loose json format\n"
      ]
     }
    ],
    "source": [
-    "!python create_loose_json.py --infile ./Megatron-LM/dataset/EN/extractedNVblogs.txt --outfile ./Megatron-LM/dataset/EN/extractedNVblogs.json"
+    "!python create_loose_json.py --infile ../dataset/EN/extractedNVblogs.txt --outfile ../dataset/EN/extractedNVblogs.json"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "proof-pakistan",
+   "id": "rubber-absolute",
    "metadata": {},
    "source": [
     "----------------------------------------------------------\n",
@@ -155,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "angry-canvas",
+   "id": "lined-transfer",
    "metadata": {},
    "source": [
     "----------------------------------------------------------\n",
@@ -191,21 +202,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "regional-stake",
+   "execution_count": 6,
+   "id": "marked-midnight",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gpt2-merges.txt  gpt2-vocab.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "!mv gpt2-vocab.json ../dataset/EN/50k/\n",
+    "!mv gpt2-merges.txt ../dataset/EN/50k/\n",
+    "!ls ../dataset/EN/50k/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "adjustable-hammer",
    "metadata": {},
    "outputs": [],
    "source": [
     "INPUT_JSON_FILE='../dataset/EN/extractedNVblogs.json'\n",
-    "OUTPUT_PATH='../dataset/EN/CustomSentenceSplitter'\n",
+    "OUTPUT_PATH='../dataset/EN/NVblog'\n",
     "VOCAB_FILE='../dataset/EN/50k/gpt2-vocab.json'\n",
     "MERGE_FILE='../dataset/EN/50k/gpt2-merges.txt'\n",
-    "NUM_CPUS=16\n"
+    "NUM_CPUS=16"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "similar-commonwealth",
+   "id": "hidden-patrick",
    "metadata": {},
    "source": [
     "---\n",
@@ -239,15 +270,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "framed-point",
+   "execution_count": 10,
+   "id": "professional-lawyer",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Opening ./Megatron-LM/dataset/EN/extractedNVblogs.json\n",
+      "Opening ../dataset/EN/extractedNVblogs.json\n",
       "> building GPT2BPETokenizer tokenizer ...\n",
       " > padded vocab (size: 50257) with 47 dummy tokens (new size: 50304)\n",
       "> building GPT2BPETokenizer tokenizer ...\n",
@@ -267,8 +298,8 @@
       "> building GPT2BPETokenizer tokenizer ...\n",
       "> building GPT2BPETokenizer tokenizer ...\n",
       "Vocab size: 50257\n",
-      "Output prefix: ./Megatron-LM/dataset/EN/NVblogs\n",
-      "Time to startup: 0.5460700988769531\n",
+      "Output prefix: ../dataset/EN/NVblog\n",
+      "Time to startup: 0.1618051528930664\n",
       " > padded vocab (size: 50257) with 47 dummy tokens (new size: 50304)\n",
       " > padded vocab (size: 50257) with 47 dummy tokens (new size: 50304)\n",
       " > padded vocab (size: 50257) with 47 dummy tokens (new size: 50304)\n",
@@ -303,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "endless-vietnamese",
+   "id": "valuable-equilibrium",
    "metadata": {},
    "source": [
     "---\n",
@@ -317,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "married-necklace",
+   "id": "accurate-drinking",
    "metadata": {},
    "source": [
     "-----\n",
