--- a/ai/Megatron/English/Python/jupyter_notebook/Megatron-LM/tools/openwebtext/Day3-1_acquiring_data.ipynb
+++ b/ai/Megatron/English/Python/jupyter_notebook/Megatron-LM/tools/openwebtext/Day3-1_acquiring_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "vital-advertising",
+   "id": "ahead-surrey",
    "metadata": {},
    "source": [
     "# \n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "permanent-reception",
+   "id": "exterior-avatar",
    "metadata": {},
    "source": [
     "--------------------------------------------------------------------------------------------------------------------\n",
@@ -33,28 +33,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "steady-henry",
+   "execution_count": 1,
+   "id": "yellow-happening",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2021-08-27 02:36:06--  http://spraakbanken.gu.se/lb/resurser/meningsmangder/webbnyheter2013.xml.bz2\n",
+      "--2021-09-15 10:33:55--  http://spraakbanken.gu.se/lb/resurser/meningsmangder/webbnyheter2013.xml.bz2\n",
       "Resolving spraakbanken.gu.se (spraakbanken.gu.se)... 130.241.42.13\n",
       "Connecting to spraakbanken.gu.se (spraakbanken.gu.se)|130.241.42.13|:80... connected.\n",
       "HTTP request sent, awaiting response... 301 Moved Permanently\n",
       "Location: https://spraakbanken.gu.se/lb/resurser/meningsmangder/webbnyheter2013.xml.bz2 [following]\n",
-      "--2021-08-27 02:36:06--  https://spraakbanken.gu.se/lb/resurser/meningsmangder/webbnyheter2013.xml.bz2\n",
+      "--2021-09-15 10:33:55--  https://spraakbanken.gu.se/lb/resurser/meningsmangder/webbnyheter2013.xml.bz2\n",
       "Connecting to spraakbanken.gu.se (spraakbanken.gu.se)|130.241.42.13|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 464382665 (443M) [application/x-bzip2]\n",
       "Saving to: ‘webbnyheter2013.xml.bz2’\n",
       "\n",
-      "webbnyheter2013.xml 100%[===================>] 442.87M  16.9MB/s    in 28s     \n",
+      "webbnyheter2013.xml 100%[===================>] 442.87M   110MB/s    in 4.1s    \n",
       "\n",
-      "2021-08-27 02:36:35 (16.0 MB/s) - ‘webbnyheter2013.xml.bz2’ saved [464382665/464382665]\n",
+      "2021-09-15 10:33:59 (109 MB/s) - ‘webbnyheter2013.xml.bz2’ saved [464382665/464382665]\n",
       "\n"
      ]
     }
@@ -65,26 +65,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "exposed-mouth",
+   "execution_count": 2,
+   "id": "happy-spectrum",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bunzip2: Input file ../../../../dataset/SV/ is a directory.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!bunzip2 -d webbnyheter2013.xml.bz2 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "turned-navigator",
+   "execution_count": 3,
+   "id": "modular-helmet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,15 +85,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "level-discipline",
+   "execution_count": 4,
+   "id": "roman-strap",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "56k  webbnyheter2013.xml\n"
+      "32k  56k  webbnyheter2013.xml\n"
      ]
     }
    ],
@@ -111,24 +103,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "separated-payday",
+   "execution_count": 5,
+   "id": "moderate-newfoundland",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2021-08-27 03:35:01--  https://raw.githubusercontent.com/spraakbanken/sb-nltk-tools/master/sb_corpus_reader.py\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.110.133, 185.199.111.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+      "--2021-09-15 10:38:48--  https://raw.githubusercontent.com/spraakbanken/sb-nltk-tools/master/sb_corpus_reader.py\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.108.133, 185.199.111.133, ...\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 3065 (3.0K) [text/plain]\n",
       "Saving to: ‘sb_corpus_reader.py’\n",
       "\n",
-      "sb_corpus_reader.py 100%[===================>]   2.99K  --.-KB/s    in 0s      \n",
+      "sb_corpus_reader.py 100%[===================>]   2.99K  --.-KB/s    in 0.001s  \n",
       "\n",
-      "2021-08-27 03:35:01 (45.7 MB/s) - ‘sb_corpus_reader.py’ saved [3065/3065]\n",
+      "2021-09-15 10:38:49 (3.77 MB/s) - ‘sb_corpus_reader.py’ saved [3065/3065]\n",
       "\n"
      ]
     }
@@ -139,15 +131,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "guilty-comparative",
+   "execution_count": 6,
+   "id": "annoying-topic",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fname:  .txt\n",
       "[['Telekombranschen', 'lyfts', 'av', 'en', 'större', 'europeisk', 'telekomaffär', ',', 'nederländska', 'KPN', 'säljer', 'tysk', 'verksamhet', 'för', 'omkring', 'åtta', 'miljarder', 'euro', ',', 'och', 'en', 'stark', 'rapport', 'från', 'Telenor', '.'], ['Denna', 'upprepade', 'process', 'är', 'död', 'nu', '\"', ',', 'skriver', '\"', 'Shield', '\"', '-', 'skaparen', 'Shawn', 'Ryan', ',', 'som', 'låg', 'bakom', 'idén', ',', 'på', 'Twitter', '.']]\n",
       "write to :  webnyheter2013.txt\n",
       "finish processing  webnyheter2013.txt\n",
@@ -172,7 +163,7 @@
     "    print(\"finish processing \",fname)\n",
     "    f.close()\n",
     "    \n",
-    "out_path='./dataset/SV/'\n",
+    "out_path='../../../../dataset/SV/'\n",
     "xml_f=out_path+'webbnyheter2013.xml'\n",
     "if xml_f.endswith('.xml') :    \n",
     "    corpus = SBCorpusReader(xml_f)\n",
@@ -189,15 +180,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "rubber-finnish",
+   "execution_count": 7,
+   "id": "exterior-episode",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "56k  webbnyheter2013.xml  webnyheter2013.txt\n"
+      "32k  56k  webbnyheter2013.xml  webnyheter2013.txt\n"
      ]
     }
    ],
@@ -207,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "round-somewhere",
+   "id": "impaired-sierra",
    "metadata": {},
    "source": [
     "---\n",
@@ -221,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "celtic-appreciation",
+   "id": "junior-washington",
    "metadata": {},
    "source": [
     "-----\n",
