--- a/ai/RIVA/English/Python/jupyter_notebook/START_HERE_RIVA.ipynb
+++ b/ai/RIVA/English/Python/jupyter_notebook/START_HERE_RIVA.ipynb
@@ -23,7 +23,7 @@
     "This RIVA Bootcamp will be covering some interesting libraries that demonstrate the capabilities of the frameworks and tasks related to building voice based applications and interfaces. Each module has a backup exercise notebook that you can refer to incase you wish to recover some cells in a lab that you deleted by mistake. Here are the modules in this tutorial:\n",
     "\n",
     "- Introduction\n",
-    "    - [Introduction to RIVA](Intro_To_Riva.ipynb)\n",
+    "    - [Introduction to RIVA](Intro/Intro_To_Riva.ipynb)\n",
     "    - [Acknowledgement and References](References-Riva.ipynb)\n",
     "\n",
     "- Setup\n",
@@ -113,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
