--- a/ai/RIVA/English/Python/jupyter_notebook/START_HERE_RIVA.ipynb
+++ b/ai/RIVA/English/Python/jupyter_notebook/START_HERE_RIVA.ipynb
@@ -27,7 +27,7 @@
     "    - [Acknowledgement and References](References-Riva.ipynb)\n",
     "\n",
     "- Setup\n",
-    "    - [RIVA Setup and basic configuration](riva-setup.ipynb)\n",
+    "    - [RIVA Setup and basic configuration](Intro/riva-setup.ipynb)\n",
     "\n",
     "\n",
     "- SpeechToText\n",
